<resources>
    <string name="app_name">HMFMS Mobile</string>
    <string name="user">account</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="loginError">loginError</string>
    <string name="connectError">connectError</string>
    <string name="refresh">refresh</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="scanner">QR code scanner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_homepage">HMFMS Mobile</string>

    <string name="option">Options</string>
    <string name="location_map">Location Map</string>
    <string name="check_list">Check List</string>
    <string name="lost_item">Lost Item List</string>
    <string name="err_location">Error location List</string>


</resources>
