<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="cathay.hospital.example.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="cathay.hospital.example.ui.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/lost_item"
        android:name="cathay.hospital.example.ui.Lost_itemFragment"
        android:label="@string/lost_item"
        tools:layout="@layout/fragment_lost_item"/>
    <fragment
        android:id="@+id/nav_loc_map"
        android:name="cathay.hospital.example.ui.Loc_mapFragment"
        android:label="@string/location_map"
        tools:layout="@layout/fragment_loc_map" />

    <fragment
        android:id="@+id/nav_checklist"
        android:name="cathay.hospital.example.ui.ChecklistFragment"
        android:label="@string/check_list"
        tools:layout="@layout/fragment_checklist" />
    <fragment
        android:id="@+id/nav_err_loc"
        android:name="cathay.hospital.example.ui.err_locFragment"
        android:label="@string/err_location"
        tools:layout="@layout/fragment_err_loc"/>
</navigation>